cli/tests/snapshots/main__formatting@fenced-code-3.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/fenced-code/fenced-code-3.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
````
aaa
```
````

-----------------------------------end input------------------------------------
|                                                                              | printWidth

