cli/tests/snapshots/main__formatting@fenced-code-5.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/fenced-code/fenced-code-5.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
foo

```
bar
```

baz

-----------------------------------end input------------------------------------
|                                                                              | printWidth

