cli/tests/snapshots/main__formatting@fenced-code-7.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/fenced-code/fenced-code-7.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
```ruby
def foo(x)
  return 3
end
```

-----------------------------------end input------------------------------------
|                                                                              | printWidth

