cli/tests/snapshots/main__formatting@fenced-code-8.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/fenced-code/fenced-code-8.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
```ruby startline=3 $%@#$
def foo(x)
  return 3
end
```

-----------------------------------end input------------------------------------
|                                                                              | printWidth

