cli/tests/snapshots/main__formatting@header-1.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/heading/header-1.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
# Hello world

-----------------------------------end input------------------------------------
|                                                                              | printWidth

