cli/tests/snapshots/main__formatting@header-2.md.snap
---
source: cli/tests/main.rs
expression: file
input_file: cli/tests/files/markdown/heading/header-2.md
---
|                                                                              | printWidth
----------------------------------start input-----------------------------------
## Hello world

-----------------------------------end input------------------------------------
|                                                                              | printWidth

