cli/tests/snapshots/main__formatting@header-4.md.snap
---
source: cli/tests/main.rs
expression: "format!(\"{}{}\", header, formatted)"
input_file: cli/tests/files/markdown/heading/header-4.md
---
|                                                                              | printWidth
=====================================input======================================
#### Hello world

